--- a/src/sass/_imageSearchApp.scss
+++ b/src/sass/_imageSearchApp.scss
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     padding: 10px;
-    background: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ASearch_Icon.svg&psig=AOvVaw1kEiT3J7OcoIePIcr0YAzK&ust=1666815628358000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCLDlsZ2a_PoCFQAAAAAdAAAAABAE)no-repeat top right;
+    background-image: url(../images/search.png);
   }
   
   .search-form-input {
